# src/routes/boat.routes.ts
@@ -14,7 +14,7 @@ export const createBoatRoutes = (): Router => {
   router.post('/auth', authController.login);
   router.post('/register', authController.register);
   router.get('/me', authenticateToken, authController.getUserConnected);
-  router.post('/sailToPort/:destination',authenticateToken,isAdminRequired,boatController.sailToPort);
+  router.post('/sailToPort/:idShip/:destination',authenticateToken,isAdminRequired,boatController.sailToPort);
   router.get('/getAvailablePorts',authenticateToken,isAdminRequired, boatController.getAvailablePorts);
   router.post('/ship/dock', boatController.dockShip);
   return router;
