# src/types/boat.types.ts
@@ -9,13 +9,21 @@ export type Boat = {
   createdBy : string;
   lastModified : Date;
 };
+export type BoatShipDock = {
+  name: string;
+  goldCargo: number;
+  createdAt  : Date;
+  captain: string;
+  status: 'docked' | 'sailing' | 'lookingForAFight';
+  crewSize: number;
+  createdBy : string;
+};
 export type BoatRequest = {
   name: string;
   goldCargo: number;
   captain: string;
   status: 'docked' | 'sailing' | 'lookingForAFight';
   crewSize: number;
-  createdBy: string;
 };
 export type BoatRequestUpdate = {
   name:string;
